<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/wms_linearlayout_main">

    <!-- 系统标题栏 -->

    <RelativeLayout style="@style/wms_relativeLayout_title">

        <!-- 返回 -->

        <TextView
            android:id="@+id/tv_search_barcode_back"
            style="@style/wms_textview_left"
            android:text="@string/wms_common_back" />

        <!-- 选项 -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_search_option"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <!-- 标题 -->

            <TextView
                android:id="@+id/tv_search_barcode_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:gravity="center"
                android:text="@string/history_in_title"
                android:textColor="@color/wms_white"
                android:textSize="18sp" />
            <!-- 竖线 -->

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/wms_white" />

            <!-- 出库记录 -->

            <TextView
                android:id="@+id/tv_search_barcode_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:gravity="center"
                android:text="@string/history_out_title"
                android:textColor="@color/value_color"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>

    <!-- 查询 -->

    <LinearLayout style="@style/linearlayout_row_search">

        <SearchView
            android:id="@+id/sv_search_barcode_barcode"
            style="@style/searchview_common1"
            android:queryHint="@string/history_query_hint">

            <requestFocus />
        </SearchView>

        <ImageView
            android:id="@+id/iv_search_barcode_scan_barcode"
            style="@style/wms_img_scan" />
    </LinearLayout>

    <!--条码列表-->
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/srl_search_barcode_barcode"
        style="@style/wms_swipeRefreshLayout">

        <ListView
            android:id="@+id/lv_search_barcode_barcode"
            style="@style/wms_listview_common1"
            android:layout_marginTop="5dp"></ListView>
    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>